# func-compiler

./: .gitignore  CMakeLists.txt  README.md  run.sh
examples/: ex01_basic.fc  ex02_thesis.fc  ex03_nesting.fc  test.fc
src/: common.hh  high_to_elc.cc  high_to_elc.hh  lambda.hh  lambda_debug.cc  lambda_debug.hh  main.cc  parser.cc  parser.hh  scanner.cc  scanner.hh  sema.cc  sema.hh  symtab.cc  symtab.hh  tree.cc  tree.hh  types.cc  types.hh
src/compiler/: common.hh  file_reading.cc  file_reading.hh  main.cc
src/compiler/backend/: elc_to_simple.cc  elc_to_simple.hh  gcode_to_c.cc  gcode_to_c.hh  gcode_to_cxx.cc  gcode_to_cxx.hh  ginstr.cc  ginstr.hh  gm.c  gm.cc  high_to_elc.cc  high_to_elc.hh  lambda.hh  lambda_debug.cc  lambda_debug.hh  lambda_lifting.cc  lambda_lifting.hh  sc_to_gcode.cc  sc_to_gcode.hh  simple.cc
src/compiler/frontend/: parser.cc  parser.hh  scanner.cc  scanner.hh  scanner_debug.cc  scanner_debug.hh  sema.cc  sema.hh  symtab.cc  symtab.hh  tree.hh  tree_debug.hh  types.cc
